--- a/styles/main.css
+++ b/styles/main.css
@@ -33,13 +33,14 @@
 
 .head {
   text-align: center;
-  color: white;
-  font-size: 80px;
   position: relative;
   padding: 10px;
 }
 
 .headtext {
+  color: white;
+  font-size: 6vw;
+  max-width: 1000px;
   position: absolute;
   top: 50%;
   left: 50%;
