--- a/styles/universal.css
+++ b/styles/universal.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:500");
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
 
 body {
-  background-color: #3C3C3C;
+  background-color: #000000;
+  background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   color: white;
   font-family: sans-serif;
 }
@@ -12,7 +17,10 @@ a {
 
 .light-theme {
   color: #222;
-  background: #e7e7e7;
+  background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .light-theme a {
@@ -48,7 +56,7 @@ a {
 }
 
 .light-theme .btn-toggle:hover {
-  background: #333;
+  background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
   color: #e7e7e7;
 }
 
@@ -63,7 +71,7 @@ a {
 }
 
 .btn-toggle:hover {
-  background: #e7e7e7;
+  background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
   color: black;
 }
 
