--- a/styles/time-t.css
+++ b/styles/time-t.css
@@ -25,8 +25,6 @@
   .tabcontent {
     display: none;
     padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
     animation: fadeEffect 0.3s;
   }
   
@@ -34,3 +32,44 @@
     from {opacity: 0.5;}
     to {opacity: 1;}
   }
+
+  * {box-sizing: border-box}
+
+
+.Vtab {
+  float: left;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  width: auto;
+  height: auto;
+}
+
+.Vtab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.Vtab button:hover {
+  background-color: #ddd;
+}
+
+.Vtab button.active {
+  background-color: #ccc;
+}
+
+.Vtabcontent {
+  float: left;
+  padding: 0px 12px;
+  border: 1px solid #ccc;
+  width: 70%;
+  border-left: none;
+  height: auto;
+}
