--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,17 @@
   position: relative;
 }
 
+.weather {
+  width: 160px;
+  height: 160px;
+}
+
+.HiBackground {
+  width: 100%;
+  height: 300px;
+  max-height: 30%;
+}
+
 .memeVideo {
   position: fixed;
   width: 480px;
@@ -50,6 +61,7 @@
 .center-cropped {
   width: 100%;
   height: 300px;
+  max-height: 30%;
   background-position: center center;
   background-repeat: no-repeat;
   overflow: hidden;
