--- a/styles/meme.css
+++ b/styles/meme.css
@@ -1,3 +1,13 @@
+.memeVideo {
+  position: fixed;
+  width: 90%;
+  max-width: 480px;
+  max-height: 270px;
+  bottom: 10px;
+  right: 10px;
+  overflow: hidden;
+}
+
 .close {
   font-size: 15px;
   text-align: center;
